# madsim

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/raft/: Cargo.toml  README.md
examples/raft/src/: lib.rs  raft.rs  tester.rs  tests.rs
examples/raft/src/kvraft/: client.rs  mod.rs  msg.rs  server.rs  tester.rs  tests.rs
examples/raft/src/raft/: mod.rs  msg.rs  raft.rs  tester.rs  tests.rs
examples/raft/src/raft/raft/: logs.rs
examples/raft/src/shard_ctrler/: client.rs  mod.rs  msg.rs  server.rs  tester.rs  tests.rs
examples/raft/src/shardkv/: client.rs  mod.rs  server.rs  tester.rs  tests.rs
madsim/: Cargo.toml  Makefile
madsim-aws-config/: Cargo.toml
madsim-aws-config/src/: lib.rs  provider_config.rs  sim.rs
madsim-aws-config/src/default_provider/: credentials.rs  region.rs
madsim-aws-config/src/meta/: mod.rs  region.rs
madsim-aws-config/src/meta/credentials/: chain.rs  credential_fn.rs  lazy_caching.rs  mod.rs
madsim-aws-config/src/sts/: assume_role.rs  mod.rs  util.rs
madsim-aws-sdk-s3/: Cargo.toml  README.md
madsim-aws-sdk-s3/src/: client.rs  config.rs  input.rs  lib.rs  no_credentials.rs  output.rs  sim.rs
madsim-aws-sdk-s3/src/client/: client.rs  client_.rs  config.rs  error.rs  input.rs  mod.rs  model.rs  operation.rs  output.rs  result.rs
madsim-aws-sdk-s3/src/operation/: abort_multipart_upload.rs  complete_multipart_upload.rs  create_multipart_upload.rs  delete_object.rs  delete_objects.rs  get_bucket_lifecycle_configuration.rs  get_object.rs  head_object.rs  list_objects_v2.rs  mod.rs  put_bucket_lifecycle_configuration.rs  put_object.rs  upload_part.rs
madsim-aws-sdk-s3/src/server/: error.rs  mod.rs  rpc_server.rs  s3.rs  server.rs  service.rs
madsim-aws-types/: Cargo.toml
madsim-aws-types/src/: endpoint.rs  lib.rs  region.rs  sdk_config.rs  sim.rs
madsim-aws-types/src/credentials/: credentials_impl.rs  mod.rs  provider.rs
madsim-etcd-client/: CHANGELOG.md  Cargo.toml  README.md
madsim-etcd-client/examples/: test.rs
madsim-etcd-client/src/: bytes.rs  election.rs  error.rs  kv.rs  lease.rs  lib.rs  maintenance.rs  server.rs  service.rs  sim.rs  watch.rs
madsim-etcd-client/tests/: test.rs
madsim-macros/: Cargo.toml
madsim-macros/src/: lib.rs  request.rs  rpc.rs  service.rs
madsim-norandom/: Cargo.toml  README.md
madsim-norandom/examples/: hashset.rs
madsim-norandom/src/: lib.rs
madsim-rdkafka/: CHANGELOG.md  Cargo.toml  README.md
madsim-rdkafka/src/: admin.rs  broker.rs  client.rs  config.rs  consumer.rs  error.rs  lib.rs  message.rs  metadata.rs  producer.rs  sim_broker.rs  topic_partition_list.rs  util.rs
madsim-rdkafka/src/sim/: admin.rs  broker.rs  client.rs  config.rs  consumer.rs  error.rs  message.rs  metadata.rs  mod.rs  producer.rs  sim_broker.rs  topic_partition_list.rs  types.rs  util.rs
madsim-rdkafka/src/sim/producer/: base_producer.rs  future_producer.rs  mod.rs
madsim-rdkafka/src/std/: LICENSE  admin.rs  client.rs  config.rs  groups.rs  mocking.rs  mod.rs  statistics.rs  topic_partition_list.rs  util.rs
madsim-rdkafka/src/std/consumer/: base_consumer.rs  mod.rs  stream_consumer.rs
madsim-rdkafka/src/std/producer/: base_producer.rs  future_producer.rs  mod.rs
madsim-rdkafka/tests/: test.rs
madsim-sim/: Cargo.toml
madsim-sim/benches/: rpc.rs
madsim-sim/src/: context.rs  fs.rs  lib.rs  plugin.rs  rand.rs  task.rs
madsim-sim/src/net/: mod.rs  network.rs  rpc.rs
madsim-sim/src/time/: instant.rs  mod.rs
madsim-std/: Cargo.toml
madsim-std/benches/: rpc.rs
madsim-std/src/: context.rs  fs.rs  lib.rs  task.rs
madsim-std/src/net/: mod.rs  network.rs  rpc.rs  tcp.rs  ucx.rs
madsim-tokio/: Cargo.toml  README.md
madsim-tokio-postgres/: Cargo.toml
madsim-tokio-postgres/src/: cancel_query.rs  config.rs  connect.rs  connect_socket.rs  socket.rs
madsim-tokio-postgres/tests/test/: main.rs  parse.rs
madsim-tokio/src/: lib.rs
madsim-tokio/src/sim/: runtime.rs
madsim-tonic/: Cargo.toml  README.md
madsim-tonic-build/: Cargo.toml  README.md
madsim-tonic-build/src/: client.rs  lib.rs  prost.rs  server.rs
madsim-tonic/src/: client.rs  codec.rs  codegen.rs  lib.rs  sim.rs  tower.rs
madsim-tonic/src/transport/: channel.rs  error.rs  mod.rs  server.rs
madsim/benches/: rpc.rs
madsim/examples/: erpc.rs  rpc.rs  swap.rs
madsim/fuzz/: Cargo.toml
madsim/fuzz/fuzz_targets/: fuzz_target_1.rs
madsim/src/: context.rs  fs.rs  lib.rs  rand.rs  rpc.rs  task.rs
madsim/src/net/: mod.rs  network.rs  rpc.rs
madsim/src/sim/: buggify.rs  collections.rs  config.rs  fs.rs  mod.rs  plugin.rs  rand.rs  signal.rs  task.rs
madsim/src/sim/net/: addr.rs  dns.rs  endpoint.rs  ipvs.rs  mod.rs  network.rs  rpc.rs  udp.rs
madsim/src/sim/net/tcp/: addr.rs  config.rs  listener.rs  mod.rs  network.rs  sim.rs  split.rs  stream.rs
madsim/src/sim/net/unix/: datagram.rs  mod.rs  split.rs  stream.rs
madsim/src/sim/runtime/: builder.rs  context.rs  metrics.rs  mod.rs
madsim/src/sim/task/: builder.rs  join.rs  mod.rs
madsim/src/sim/time/: error.rs  instant.rs  interval.rs  mod.rs  sleep.rs  system_time.rs
madsim/src/sim/utils/: mpsc.rs
madsim/src/std/: buggify.rs  fs.rs  mod.rs  rand.rs  signal.rs  task.rs  time.rs
madsim/src/std/net/: erpc.rs  mod.rs  rpc.rs  tcp.rs  ucx.rs
madsim/src/time/: instant.rs  mod.rs  timer.rs
src/: context.rs  executor.rs  fs.rs  lib.rs  rand.rs  task.rs  time.rs
src/net/: mod.rs  network.rs
tonic-example/: Cargo.toml  build.rs
tonic-example/proto/: helloworld.proto
tonic-example/src/: client.rs  generated.rs  lib.rs  server.rs
tonic-example/tests/: test.rs
