[package]
name = "madsim-aws-config"
version = "0.51.0"
authors = ["Kevin Axel <kevinaxel@163.com>"]
description = "madsim simulation of AWS SDK config and credential provider implementations."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/madsim-rs/madsim"

[features]
client-hyper = ["aws-smithy-client/client-hyper"]
rustls = ["aws-smithy-client/rustls"]
native-tls = ["aws-smithy-client/native-tls"]
rt-tokio = ["aws-smithy-async/rt-tokio", "tokio/rt"]
default = ["client-hyper", "rustls", "rt-tokio"]

[target.'cfg(not(madsim))'.dependencies]
aws-config = "0.51.0"

[target.'cfg(madsim)'.dependencies]
ring = "0.16"
hex = "0.4.3"
zeroize = "1"
bytes = "1.1.0"
http = "0.2.4"

[target.'cfg(madsim)'.dependencies.aws-sdk-sts]
default-features = false
version = "0.21.0"

[target.'cfg(madsim)'.dependencies.aws-smithy-async]
version = "0.51.0"

[target.'cfg(madsim)'.dependencies.aws-smithy-client]
default-features = false
version = "0.51.0"

[target.'cfg(madsim)'.dependencies.aws-smithy-types]
version = "0.51.0"

[target.'cfg(madsim)'.dependencies.aws-types]
# version = "0.51.0"
package = "madsim-aws-types"
path = "../madsim-aws-types"

[target.'cfg(madsim)'.dependencies.tokio]
version = "1"
features = ["sync"]

[target.'cfg(madsim)'.dependencies.tracing]
version = "0.1"

[target.'cfg(madsim)'.dependencies.hyper]
version = "0.14"
default-features = false

[target.'cfg(madsim)'.dependencies.aws-smithy-http]
version = "0.51.0"

[target.'cfg(madsim)'.dependencies.aws-smithy-http-tower]
version = "0.51.0"


[target.'cfg(madsim)'.dependencies.tower]
version = "0.4.8"

[target.'cfg(madsim)'.dev-dependencies]
futures-util = "0.3.16"
tracing-test = "0.2.1"
async-trait = "0.1.51"
env_logger = "0.9.0"
arbitrary = "1.0.2"
serde_json = "1"

[target.'cfg(madsim)'.dev-dependencies.tokio]
version = "1"
features = ["full", "test-util"]

[target.'cfg(madsim)'.dev-dependencies.serde]
version = "1"
features = ["derive"]

[target.'cfg(madsim)'.dev-dependencies.aws-smithy-client]
features = ["test-util"]
version = "0.51.0"

[target.'cfg(madsim)'.dev-dependencies.hyper-rustls]
version = "0.23.0"
features = ["webpki-tokio", "http2", "http1"]
