[package]
name = "madsim-aws-sdk-s3"
version = "0.5.0+1"
edition = "2021"
authors = ["Kevin Axel <kevinaxel@163.com>"]
description = "The s3 simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["network-programming", "asynchronous", "simulation"]
keywords = ["s3", "api", "client", "async", "simulator"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "1"

[target.'cfg(madsim)'.dependencies]
madsim = "0.2.15"
aws-smithy-http = "0.60"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
aws-types = "1"
bytes = "1"
http = "1"
spin = "0.9"
tracing = "0.1"

[features]
rustls = ["aws-sdk-s3/rustls"]
rt-tokio = ["aws-sdk-s3/rt-tokio"]
default = ["rustls", "rt-tokio"]
