[package]
name = "madsim-etcd-client"
version = "0.6.0+0.14.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The etcd simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["network-programming", "asynchronous", "simulation"]
keywords = ["etcd", "api", "client", "async", "simulator"]
readme = "README.md"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(madsim))'.dependencies]
etcd-client = "0.14"

[target.'cfg(madsim)'.dependencies]
http = "1"
futures-util = "0.3"
madsim = { version = "0.2.20", path = "../madsim" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
spin = "0.9"
thiserror = "1"
toml = "0.8"
tonic = { version = "0.12", default-features = false, features = ["transport"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
