[package]
name = "madsim-rdkafka"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
madsim = { version = "0.2.5", path = "../madsim" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
