[package]
name = "madsim-rdkafka"
version = "0.2.22"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The rdkafka simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["asynchronous", "simulation"]
keywords = ["kafka", "rdkafka", "async", "simulator"]
readme = "README.md"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(madsim)'.dependencies]
async-channel = "1"
async-trait = "0.1"
futures-channel = "0.3.0"
futures-util = "0.3"
madsim = { version = "0.2.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[target.'cfg(not(madsim))'.dependencies]
async-trait = "0.1"
# rdkafka-sys = { version = "4.3.0", default-features = false }
rdkafka-sys = { git = "https://github.com/MaterializeInc/rust-rdkafka", rev = "8ea07c4", default-features = false }
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
futures-util = { version = "0.3.0", default-features = false }
libc = "0.2.0"
log = "0.4.19"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
slab = "0.4"
tokio = { version = "1.0", features = ["rt", "time"], optional = true }
tracing = { version = "0.1.30", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.9.0"
futures = "0.3.0"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.3.15"
regex = "1.1.6"
smol = "1.2.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

# These features are re-exports of the features that the rdkafka-sys crate
# provides. See the rdkafka-sys documentation for details.
[features]
default = ["libz", "tokio"]
naive-runtime = ["futures-executor"]
cmake-build = ["rdkafka-sys/cmake-build"]
cmake_build = ["rdkafka-sys/cmake_build"]
dynamic-linking = ["rdkafka-sys/dynamic-linking"]
dynamic_linking = ["rdkafka-sys/dynamic_linking"]
ssl = ["rdkafka-sys/ssl"]
ssl-vendored = ["rdkafka-sys/ssl-vendored"]
gssapi = ["rdkafka-sys/gssapi"]
gssapi-vendored = ["rdkafka-sys/gssapi-vendored"]
sasl = ["rdkafka-sys/sasl"]
libz = ["rdkafka-sys/libz"]
libz-static = ["rdkafka-sys/libz-static"]
curl = ["rdkafka-sys/curl"]
curl-static = ["rdkafka-sys/curl-static"]
zstd = ["rdkafka-sys/zstd"]
zstd-pkg-config = ["rdkafka-sys/zstd-pkg-config"]
external-lz4 = ["rdkafka-sys/external-lz4"]
external_lz4 = ["rdkafka-sys/external_lz4"]
