[package]
name = "madsim-sim"
version = "0.1.1"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "Simulator backend for MadSim."
readme = "../README.md"
homepage = "https://github.com/madsys-dev/madsim"
repository = "https://github.com/madsys-dev/madsim"
license = "Apache-2.0"
keywords = ["distributed-systems", "async", "deterministic", "simulation"]
categories = ["asynchronous", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logger = ["env_logger"]
rpc = ["serde", "bytes"]

[dependencies]
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
async-task = "4.0"
futures = "0.3"
naive-timer = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
env_logger = { version = "0.9", optional = true }
bytes = { version = "1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
