[package]
name = "madsim-std"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logger = ["env_logger"]
rpc = ["serde", "flexbuffers"]
macros = ["madsim-macros"]

[dependencies]
madsim-macros = { version = "0.1.1", path = "../madsim-macros", optional = true }
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
env_logger = { version = "0.9", optional = true }
tokio = { version = "1.11", features = ["rt", "fs", "net", "time", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1.0"
flexbuffers = { version = "2.0", optional = true }

[package.metadata.docs.rs]
all-features = true
