[package]
name = "madsim-std"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "Real world backend for MadSim."
readme = "../README.md"
homepage = "https://github.com/madsys-dev/madsim"
repository = "https://github.com/madsys-dev/madsim"
license = "Apache-2.0"
keywords = ["distributed-systems", "async", "deterministic", "simulation"]
categories = ["asynchronous", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rpc = ["serde", "bincode"]
ucx = ["async-ucx"]

[dependencies]
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt", "fs", "net", "time", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
bincode = { version = "1.3", optional = true }
async-ucx = { version = "0.1", features = ["event"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
