[package]
name = "madsim-tokio"
version = "0.2.30"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The `tokio` simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["asynchronous", "network-programming", "simulation"]
keywords = ["io", "async", "non-blocking", "futures", "simulator"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# enable everything
full = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

# tokio features
fs = ["tokio/fs"]
io-util = ["tokio/io-util"]
io-std = ["tokio/io-std"]
macros = ["tokio/macros"]
net = ["tokio/net"]
process = ["tokio/process"]
rt = ["tokio/rt"]
rt-multi-thread = ["tokio/rt-multi-thread"]
signal = ["tokio/signal"]
sync = ["tokio/sync"]
test-util = ["tokio/test-util"]
time = ["tokio/time"]
tracing = ["tokio/tracing"]

# tokio optional dependencies
bytes = []
once_cell = []
memchr = []
mio = []
socket2 = []
num_cpus = []
parking_lot = []
libc = []
signal-hook-registry = []
tokio-macros = []

[target.'cfg(madsim)'.dependencies]
madsim = { version = "0.2.19", path = "../madsim" }
spin = "0.9"

[dependencies]
tokio = "1"

[dev-dependencies]
tracing = "0.1"

[lints]
workspace = true
