[package]
name = "madsim-tonic-build"
version = "0.4.2+0.10.0"
edition = "2021"
authors = [
    "Lucio Franco <luciofranco14@gmail.com>",
    "Runji Wang <wangrunji0408@163.com>",
]
description = "Codegen module of `madsim-tonic` simulation implementation."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["network-programming", "asynchronous", "simulation"]
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.2"
proc-macro2 = "1"
prost-build = { version = "0.12", optional = true }
quote = "1"
syn = "2"
tonic-build = "0.10.0"

[features]
compression = []
default = ["transport", "prost"]
prost = ["prost-build"]
transport = []
