[package]
name = "madsim-tonic"
version = "0.2.0-alpha.2"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The `tonic` simulator on madsim."
homepage = "https://github.com/madsys-dev/madsim"
repository = "https://github.com/madsys-dev/madsim"
categories = ["network-programming", "asynchronous", "simulation"]
keywords = ["rpc", "grpc", "async", "protobuf", "simulator"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
madsim = { version = "0.2.0-alpha.2", path = "../madsim" }
futures = "0.3"
tonic = "0.7"
tower = "0.4"
log = "0.4"
