[package]
name = "madsim-tonic"
version = "0.3.0+0.9.2"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The `tonic` simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["network-programming", "asynchronous", "simulation"]
keywords = ["rpc", "grpc", "async", "protobuf", "simulator"]
readme = "README.md"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tls = ["tonic/tls"]

[target.'cfg(not(madsim))'.dependencies]
tonic = "0.9.2"

[target.'cfg(madsim)'.dependencies]
async-stream = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
madsim = { version = "0.2.20", path = "../madsim" }
tracing = "0.1"
tonic = { version = "0.9.2", default-features = false, features = ["codegen"] }
