[package]
name = "madsim-tonic"
version = "0.5.1+0.12.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The `tonic` simulator on madsim."
homepage = "https://github.com/madsim-rs/madsim"
repository = "https://github.com/madsim-rs/madsim"
categories = ["network-programming", "asynchronous", "simulation"]
keywords = ["rpc", "grpc", "async", "protobuf", "simulator"]
readme = "README.md"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tls = ["tonic/tls"]

[target.'cfg(not(madsim))'.dependencies]
tonic = "0.12"

[target.'cfg(madsim)'.dependencies]
async-stream = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
madsim = { version = "0.2.20", path = "../madsim" }
tracing = "0.1"
tonic = { version = "0.12", default-features = false, features = [
    "codegen",
    "transport",
] }
tokio = "1"
tower = { version = "0.4.7" }

[lints]
workspace = true
