[package]
name = "madsim"
version = "0.2.0-alpha.7"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "Deterministic Simulator for distributed systems."
readme = "../README.md"
homepage = "https://github.com/madsys-dev/madsim"
repository = "https://github.com/madsys-dev/madsim"
license = "Apache-2.0"
keywords = ["distributed-systems", "async", "deterministic", "simulation"]
categories = ["asynchronous", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "rpc"]
ucx = ["async-ucx"]
rpc = ["bincode"]
macros = ["madsim-macros", "tokio/macros"]
erpc = ["rpc"] # "mad_rpc"

[dependencies]
bincode = { version = "1", optional = true }
bytes = "1"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
madsim-macros = { version = "=0.2.0-alpha.7", path = "../madsim-macros", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(madsim)'.dependencies]
ahash = "0.7"
async-task = "4"
async-channel = "1.6"
async-ringbuffer = "0.5"
downcast-rs = "1.2"
libc = "0.2"
naive-timer = "0.2"
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.5"

[target.'cfg(not(madsim))'.dependencies]
async-ucx = { version = "0.1", features = ["event"], optional = true }
tokio = { version = "1", features = ["rt", "fs", "net", "time", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
# mad_rpc = { git = "https://github.com/madsys-dev/madrpc", rev = "2be4b02", optional = true }

[dev-dependencies]
criterion = "0.3"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "rpc"
harness = false

[[example]]
name = "erpc"
required-features = ["erpc"] 

[package.metadata.docs.rs]
# all-features = true
rustc-args = ["--cfg", "madsim"]
rustdoc-args = ["--cfg", "madsim", "--cfg", "docsrs"]
