[package]
name = "tonic-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[features]
default = ["sim"]
sim = ["tonic/sim"]

[dependencies]
prost = "0.10"
futures-core = "0.3"
tonic = { path = "../madsim-tonic", package = "madsim-tonic" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
