[package]
name = "tonic-example"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
madsim = { path = "../madsim" }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { path = "../madsim-tonic", package = "madsim-tonic" }
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = { path = "../madsim-tonic-build", package = "madsim-tonic-build" }
