[package]
name = "raft"
version = "0.1.0"
edition = "2018"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The labs of Raft consensus algorithm on MadSim."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
madsim = { path = "../../madsim", features = ["rpc", "macros", "logger"]}
log = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
